Segundo commit de la réplica de Drumbeat

--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drumbeat</title>
+    <meta name="description" content="Drumbeat">
 </head>
 <body>
     <div id="webDrumbeat">
         <header>
             <nav>
+                <nav>
+                    <ul>
+                        <li><a href="#">log in</a></li>
+                        <li><a href="#">sign up</a></li>
+                    </ul>
+                </nav>
                 <ul>
-                    <li><a href="#"><img src="img_drumbeat/drumbeat_logo.png" alt="drumbeat_logo">drumbeat_logo</a></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li><a href="#"><img src="img_drumbeat/drumbeat_logo.png" alt="drumbeat_logo"></a></li>
+                    <li>about</li>
+                    <li>projects</li>
+                    <li>people</li>
+                    <li>festival</li>
+                    <li>donate</li>
                 </ul>
             </nav>
+
         </header>
     </div>
 </body>
