Creando el encabezado de Drumbeat

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drumbeat</title>
     <meta name="description" content="Drumbeat">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="webDrumbeat">
+    <div id="encabezadoYnavegacion">
         <header>
-            <nav>
-                <nav>
-                    <ul>
-                        <li><a href="#">log in</a></li>
-                        <li><a href="#">sign up</a></li>
-                    </ul>
-                </nav>
+            <span id="logo"><a href="#"><img src="img_drumbeat/drumbeat_logo.png" alt="drumbeat_logo"></a></span>
+            <nav id="navbarPrincipal">
                 <ul>
-                    <li><a href="#"><img src="img_drumbeat/drumbeat_logo.png" alt="drumbeat_logo"></a></li>
+                    <li><a href="#">log in</a></li>
+                    <li><a href="#">sign up</a></li>
+                </ul>
+                <ul>
                     <li>about</li>
                     <li>projects</li>
                     <li>people</li>
@@ -25,8 +24,11 @@
                     <li>donate</li>
                 </ul>
             </nav>
-
         </header>
+        <span id="subtitulo"></span>
+        <nav></nav>
+        <div></div>
     </div>
+<div></div>
 </body>
 </html>
