Encabezado de Drumbeat completado

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
                     <img src="img_drumbeat/drumbeat_logo.png" alt="Logotipo Drumbeat">
                 </div>
 
-                <nav class="main-nav" aria-label="Navegación principal">
-                    <ul>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">projects</a></li>
-                        <li><a href="#">people</a></li>
-                        <li><a href="#">festival</a></li>
-                        <li><a href="#" class="btn-register">register</a></li>
+                <div class="first-nav">
+                    <ul class="access-nav">
+                        <li><a href="#">log in</a></li>
+                        <li><a href="#">sign up</a></li>
                     </ul>
-                </nav>
+
+                    <nav class="main-nav" aria-label="Navegación principal">
+                        <ul>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">projects</a></li>
+                            <li><a href="#">people</a></li>
+                            <li><a href="#">festival</a></li>
+                            <li><a href="#">donate</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
             <section class="header-title container">
-                <h2 class="titulo">Drumbeat Learning, Freedom and the Web Festival</h2>
+                    <h2 class="titulo">Drumbeat Learning, Freedom and the Web Festival</h2>
             </section>
             <section class="container">
                 <div class="subnav">
@@ -53,17 +60,21 @@
             <div class="grid">
                 <!-- Main content -->
                 <section class="content" id="program">
-                    <p class="lead">
-                        Imagina un festival con muchas carpas diferentes: cada una con su foco —talleres, aulas, pruebas y demos—.
-                        La idea es aprender haciendo, compartir y crear recursos abiertos para la web.
-                    </p>
-
                     <article class="intro">
                         <h3>Program</h3>
+                        <img src="img_drumbeat/program.png" alt="Program IMG">
                         <p>
-                            El festival se organiza en distintos espacios temáticos donde se pueden dar clases, montar demos y probar ideas.
-                            Cada espacio ofrece actividades distintas: desde badges hasta hackerspaces y un escenario principal.
+                        Imagine a folk festival with many different tents — tents for all different sorts of music,
+                        a tent where you learn how to fiddle, and maybe one where you make drums. Each has its
+                        focus. People move from tent to tent making up their own experience.
                         </p>
+                        <p>
+                            The Drumbeat Festival will work exactly like this. We'll have all kinds of spaces where you
+                            can teach and learn — studios, labs, playgrounds, classrooms and even a few tents in the
+                            public square. Each space will provide a place to dive deep and get your hands dirty with
+                            some of the most interesting ideas at the intersection of learning, freedom and the web.
+                        </p>
+
                     </article>
 
                     <h4 class="section-title">Festival Spaces</h4>
