--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="icon" type="image/png" href="img_drumbeat/drumbeat_icono.png">
     </head>
     <body>
-        <header class="site-header">
-            <div class="container header-inner">
+        <header class="site-header container">
+            <div class="header-inner">
                 <div class="logo">
                     <img src="img_drumbeat/drumbeat_logo.png" alt="Logotipo Drumbeat">
                 </div>
@@ -31,10 +31,10 @@
                     </nav>
                 </div>
             </div>
-            <section class="header-title container">
-                    <h2 class="titulo">Drumbeat Learning, Freedom and the Web Festival</h2>
+            <section class="header-title">
+                <h2 class="titulo">Drumbeat Learning, Freedom and the Web Festival</h2>
             </section>
-            <section class="container">
+            <section>
                 <div class="subnav">
                     <div class="subnav-links">
                         <a href="#">Festival</a>
@@ -47,10 +47,13 @@
                     </div>
 
                     <div class="language">
-                        <span style="font-size: 12px">language:</span>
-                        <a href="#" class="active">en</a>
-                        <a href="#">ca</a>
-                        <a href="#">es</a>
+                        <span style="font-size: 13px">language: </span>
+                        <span class="language-selector">
+                            <a href="#" class="active">es</a>
+                            <a href="#">ca</a>
+                            <a href="#">en</a>
+                        </span>
+
                     </div>
                 </div>
             </section>
@@ -61,71 +64,84 @@
                 <!-- Main content -->
                 <section class="content" id="program">
                     <article class="intro">
-                        <h3>Program</h3>
-                        <img src="img_drumbeat/program.png" alt="Program IMG">
-                        <p>
-                        Imagine a folk festival with many different tents — tents for all different sorts of music,
-                        a tent where you learn how to fiddle, and maybe one where you make drums. Each has its
-                        focus. People move from tent to tent making up their own experience.
-                        </p>
-                        <p>
-                            The Drumbeat Festival will work exactly like this. We'll have all kinds of spaces where you
-                            can teach and learn — studios, labs, playgrounds, classrooms and even a few tents in the
-                            public square. Each space will provide a place to dive deep and get your hands dirty with
-                            some of the most interesting ideas at the intersection of learning, freedom and the web.
-                        </p>
-
+                        <section>
+                            <h3>Program</h3>
+                            <img src="img_drumbeat/program.png" alt="Program IMG">
+                            <p>
+                                <strong>Imagine a folk festival with many different tents</strong> — tents for all different sorts of music,
+                                a tent where you learn how to fiddle, and maybe one where you make drums. Each has its
+                                focus. People move from tent to tent making up their own experience.
+                            </p>
+                            <p>
+                                <strong>The Drumbeat Festival will work exactly like this.</strong> We'll have all kinds of spaces where you
+                                can teach and learn — studios, labs, playgrounds, classrooms and even a few tents in the
+                                public square. Each space will provide a place to dive deep and get your hands dirty with
+                                some of the most interesting ideas at the intersection of learning, freedom and the web.
+                            </p>
+                        </section>
+                        <section>
+                            <h4>Schedule</h4>
+                            <p>
+                                Want to know exactly what's going to happen? You can see the draft schedule here on the
+                                Festival wiki. We're still evolving the details — but the general themes and style of
+                                sessions will give you a feel for what's going to happen. You can also read the
+                                activities page on the wiki for more detailed information.
+                            </p>
+                            <h4 class="section-title">Festival Spaces</h4>
+                            <p>
+                                Here's some of the different spaces we're planning for the Drumbeat Festival. Check back often as
+                                hosts will be updating these descriptions over the coming weeks.
+                            </p>
+                        </section>
                     </article>
 
-                    <h4 class="section-title">Festival Spaces</h4>
-
                     <div class="cards">
-                        <div class="card card-pink">
+                        <div class="card card-pink card1">
                             <h5>Badge lab</h5>
                             <p>Test, criticar y mejorar insignias para reconocer el aprendizaje informal.</p>
                         </div>
 
-                        <div class="card card-green">
+                        <div class="card card-green card2">
                             <h5>Webcraft toolshed</h5>
                             <p>Testear y mejorar cursos de desarrollo web basados en estándares.</p>
                         </div>
 
-                        <div class="card card-yellow">
+                        <div class="card card-yellow card1">
                             <h5>Peer-learning fishbowl</h5>
                             <p>Feedback entre pares para cursos en desarrollo y diseño de nuevos cursos.</p>
                         </div>
 
-                        <div class="card card-blue">
+                        <div class="card card-blue card2">
                             <h5>Local learning incubator</h5>
                             <p>Ayudar a bibliotecas y comunidades a crear contenido educativo abierto.</p>
                         </div>
 
-                        <div class="card card-pink">
+                        <div class="card card-pink card3">
                             <h5>Open content studio</h5>
                             <p>Hackear libros de texto abiertos y construir catálogos de recursos.</p>
                         </div>
 
-                        <div class="card card-green">
+                        <div class="card card-green card2">
                             <h5>Hackerspace playground</h5>
                             <p>Proyectos con Processing, Arduino, MakerBot y otros juguetes maker.</p>
                         </div>
 
-                        <div class="card card-yellow">
+                        <div class="card card-yellow card1">
                             <h5>Wikipedia lounge</h5>
                             <p>Fusiones entre Wikipedia y proyectos educativos.</p>
                         </div>
 
-                        <div class="card card-blue">
+                        <div class="card card-blue card2">
                             <h5>Open source classroom</h5>
                             <p>Convertir proyectos open source en recursos didácticos.</p>
                         </div>
 
-                        <div class="card card-pink">
+                        <div class="card card-pink card1">
                             <h5>Video + learning gallery</h5>
                             <p>Crear, traducir y compartir videos con propósito educativo.</p>
                         </div>
 
-                        <div class="card card-green">
+                        <div class="card card-green card2">
                             <h5>Main stage</h5>
                             <p>Demos y pequeñas conferencias con ideas destacadas del festival.</p>
                         </div>
@@ -136,31 +152,73 @@
                 <!-- Sidebar -->
                 <aside class="sidebar" aria-labelledby="sidebar-title">
                     <div class="register-box">
-                        <h3 id="sidebar-title">Register</h3>
-                        <p>Únete a tres días de creación, enseñanza y hacking educativo.</p>
-                        <a href="#" class="cta">Regístrate ahora</a>
-                        <p class="small">o encuentra cómo colaborar en el proyecto.</p>
+                        <h3>Register</h3>
+                        <p class="small">or find out <strong>how get more involved.</strong></p>
                     </div>
 
-                    <div class="who-comes">
-                        <h4>Who should come?</h4>
-                        <ul>
-                            <li>Autores de libros abiertos y remixers</li>
-                            <li>Profesores y desarrolladores web</li>
-                            <li>Hackerspaces y comunidades creativas</li>
-                            <li>Bibliotecarios y educadores</li>
-                            <li>Startups de educación abierta</li>
-                        </ul>
-                    </div>
+                    <section class="info-section">
+                        <h3 class="titulo-sidebar">What's it all about?</h3>
 
-                    <div class="info-box">
-                        <h4>What can you learn?</h4>
-                        <ul>
-                            <li>Organizar cursos peer-to-peer</li>
-                            <li>Crear mochilas digitales de credenciales</li>
-                            <li>Integrar Wikipedia en proyectos</li>
-                            <li>Compartir buenas prácticas open web</li>
+                        <p class="intro-text">
+                            The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat
+                            Festival will gather teachers, learners and technologists from around the world who are at
+                            the heart of this revolution. Join us in Barcelona for three days of making, teaching,
+                            hacking inventing and shaping the future of education and the web. <a href="#">learn more.</a>
+                        </p>
+                        <ul class="promise-list">
+                            <li class="promise-item">
+                                <span class="icon icon-people"></span>
+                                <p>Learn how to organize a <strong>Peer 2 Peer <University></University></strong> course.</p>
+                            </li>
+
+                            <li class="promise-item">
+                                <span class="icon icon-backpack"></span>
+                                <p>Help build a 'digital backpack' to track credentials for online learners.</p>
+                            </li>
+
+                            <li class="promise-item">
+                                <span class="icon icon-van"></span>
+                                <p>Convert a public square into a learning lab with the <strong>Hackbus</strong>.</p>
+                            </li>
+
+                            <li class="promise-item">
+                                <span class="icon icon-tree"></span>
+                                <p>Trade ideas about <strong>teaching the open web</strong>.</p>
+                            </li>
+
+                            <li class="promise-item">
+                                <span class="icon icon-cloud"></span>
+                                <p>Share <strong>best practices for open web hackers</strong>.</p>
+                            </li>
+
+                            <li class="promise-item">
+                                <span class="icon icon-puzzle"></span>
+                                <p>Integrate <strong>Wikipedia</strong> into your learning project.</p>
+                            </li>
                         </ul>
+                        <div class="who-comes">
+                            <h3>Who should come?</h3>
+
+                            <ul class="checklist">
+                                <li>Open textbook authors and remixers</li>
+                                <li>People teaching web development</li>
+                                <li>Edupunks</li>
+                                <li>Hackerspaces</li>
+                                <li>Creative Commoners</li>
+                                <li>Radical librarians</li>
+                                <li>Wikipedians</li>
+                                <li>Open education start ups</li>
+                                <li><strong>And, of course, teachers and learners of all stripes</strong></li>
+                            </ul>
+
+                            <p class="small-invite">
+                                We’re extending a special **invite and reduced fees** to people attending **OpenEd2010** which takes place in Barecelona on the two days before the Drumbeat Festival. We’ll announce details in the coming weeks.
+                            </p>
+                        </div>
+                    </section>
+                    <div class="button-social-media">
+                        <button class="identica"><img src="img_drumbeat/identica.png" alt="identica">Share on Identifi.ca</button>
+                        <button class="twitter"><img src="img_drumbeat/twitter.png" alt="twitter">Tweet this</button>
                     </div>
                 </aside>
             </div>
