actualizado los estilos de Drumbeat

--- a/index.html
+++ b/index.html
@@ -157,14 +157,16 @@
                     </div>
 
                     <section class="info-section">
-                        <h3 class="titulo-sidebar">What's it all about?</h3>
+                        <article class="wiaa">
+                            <h3 class="titulo-sidebar what-is-all-about">What's it all about?</h3>
 
-                        <p class="intro-text">
-                            The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat
-                            Festival will gather teachers, learners and technologists from around the world who are at
-                            the heart of this revolution. Join us in Barcelona for three days of making, teaching,
-                            hacking inventing and shaping the future of education and the web. <a href="#">learn more.</a>
-                        </p>
+                            <p class="intro-text">
+                                The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat
+                                Festival will gather teachers, learners and technologists from around the world who are at
+                                the heart of this revolution. Join us in Barcelona for three days of making, teaching,
+                                hacking inventing and shaping the future of education and the web. <a href="#">learn more.</a>
+                            </p>
+                        </article>
                         <ul class="promise-list">
                             <li class="promise-item">
                                 <span class="icon icon-people"></span>
