actualizado el tamaño del contenedor

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <section>
                             <h4>Schedule</h4>
                             <p>
-                                Want to know exactly what's going to happen? You can see the draft schedule here on the
+                                Want to know exactly what's going to happen? You can see the <a>draft schedule</a> here on the
                                 Festival wiki. We're still evolving the details — but the general themes and style of
                                 sessions will give you a feel for what's going to happen. You can also read the
                                 activities page on the wiki for more detailed information.
